[project]
name = "fracture-insights"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy-stl>=3.2.0",
    "rtree>=1.4.1",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "similaritymeasures>=1.4.0",
    "tqdm>=4.67.1",
    "trimesh>=4.10.0",
    "vtk>=9.5.2",
]
[tool.setuptools.packages.find]
include = ["pc*"]
exclude = ["Dataset*", "figures*"]